--- a/Licenta/Licenta/Foodie-Info.plist
+++ b/Licenta/Licenta/Foodie-Info.plist
@@ -67,5 +67,11 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OpenSans-Regular.ttf</string>
+		<string>OpenSans-Semibold.ttf</string>
+		<string>OpenSans-Light.ttf</string>
+	</array>
 </dict>
 </plist>
